--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "talkative-inc",
   "version": "1.0.0",
+    "engines": {
+    "node": "10.9.0"
+  }
   "description": "",
   "main": "chat.js",
   "scripts": {
@@ -11,7 +14,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "node": "^10.9.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "mongoose": "^5.4.18",
